# python

./: .gitignore  README.md  README.md.txt  content.py  names.csv  test.ipynb
.devcontainer/: devcontainer.json
1108python應用基礎班/: all_students.csv  all_students.xlsx  lesson2.ipynb  lesson3.ipynb  lesson3_1.ipynb  lesson3_2.ipynb  lesson4_1.ipynb  lesson4_2.ipynb  lesson4_3.ipynb  lesson5_1.ipynb  lesson6_1.ipynb  lesson7_2.ipynb  lesson8_1.ipynb  lesson8_covid19_country.py  result.csv  student1.csv  台北市.xls  各鄉鎮市區人口密度.xls  歷年國內主要觀光遊憩據點遊客人數月別統計.csv
1116晚上班/: lesson2.ipynb  lesson3_1.ipynb  lesson4_1.ipynb  lesson4_2.ipynb
1變數_字串_數字/: README.md
2Lists_Tuples_Dictionaries和Sets/: README.md
3python結構/: README.md
4Modules_Packages_and_Programs/: README.md
5Objects and Classes/: README.md
Concurrency/: README.md
Lists,_Tuples_Dictionaries和Sets/: README.md
Python基礎與數值計算/: README.md  bmi.py  circle_s.py  complex_s.py  degree.md  ladder.md  log.md  mathop.py  money.py  password.py
TQC/: PYD1010.py  PYD104.py  PYD108.py  PYD202.py  PYD204.py  PYD208.py  PYD210.py  PYD302.py  PYD306.py  PYD308.py  PYD310.py  PYD402.py  PYD408.py  (+20 more)
moj/: Untitled.ipynb  main.py  practice1.ipynb  practice10.py  practice2.ipynb  practice4.ipynb  practice4.py  practice5.py  practice7.ipynb  practice8.ipynb  practice9.ipynb  pyproject.toml
moj/.ipynb_checkpoints/: Practice 6-checkpoint.ipynb  practice10-checkpoint.py  practice3-checkpoint.ipynb  practice5-checkpoint.py  practice7-checkpoint.ipynb  practice8-checkpoint.ipynb  practice9-checkpoint.ipynb
moj/link/: README.md
(+1479 files in other folders)
