[project]
name = "moj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "wget>=3.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
